# AboutGLTF

./: .gitignore  Basic Information.md  Diagrams.xml  GltfDraco.cpp  README.md  exportTest.gltf  sample.gltf  testGLB.glb  work note.md  关于draco.md  关于gltf.md  关于gzip.md  工作流程.xml
EncodeGLTF/: EncodeGLTF.sln
EncodeGLTF/3rdpart/fx-gltf-1.0.1/include/fx/: gltf.h
EncodeGLTF/3rdpart/tinygltf/include/tinygltf/: tiny_gltf.h
EncodeGLTF/3rdpart/zlib-1.2.11/lib/: zlibstat.lib
EncodeGLTF/EncodeGLTF/: CMakeLists.txt  EncodeGLTF.vcxproj  EncodeGLTF.vcxproj.filters  Encoder.cpp  Encoder.h  Helper.cpp  Helper.h  Utility.cpp  Utility.h  ball.gltf  main.cpp  omain.cpp  tinyGLTF_wrapper.h
EncodeGLTF/TestEncoder/: TestEncoder.vcxproj  main.cpp
cpp/: CMakeLists.txt
cpp/3rdpart/tinygltf/include/tinygltf/: tiny_gltf.h
cpp/EncodeGLTF/: CMakeLists.txt  Encoder.cpp  Encoder.h  Utility.h  tinyGLTF_wrapper.h  zlib_wrapper.hpp
cpp/TestEncoder/: CMakeLists.txt  main.cpp
cpp/vsdev/: DracoGltf.sln  EncodeGltf.vcxproj  EncodeGltf.vcxproj.filters  TestUnit.vcxproj  TestUnit.vcxproj.filters
doc/: work note.md  关于gltf.md  关于gzip.md
javascript/: .eslintrc.js  index.js  package-lock.json  package.json
javascript/lib/: Assembler.js  SplitNAssemble.js  Splitter.js  ZlibWrapper.js
javascript/test/: zglbToglb.js
